--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
                                 <h1><strong>Peninsula Tech</strong><br><br>
-								    Your Bay Area tech guru</h1>
+								    Your Bay Area tech guru.</h1>
 							</header>
 							<p>Hi, my name is Ben and I provide in-home 
                             tech support in the San Francisco Bay Area, 
@@ -39,9 +39,9 @@
                                 <ul class='dual-columns'>
                                     <li>Mac</li>
                                     <li>Windows</li>
-                                    <li>Linux</li>
                                     <li>iPhone</li>
                                     <li>Android</li>
+                                    <li>Printers</li>
                                     <li>Email</li>
                                     <li>Software</li>
                                     <li>Home network</li>
@@ -50,27 +50,83 @@
 
                                 </ul>
                             </p>
+							<a href="#contact" class="button large
+							    scrolly">Hire Me</a>
 						</div>
 					</div>
 				</div>
 			</article>
+
+		<!-- Work -->
+			<article id="work" class="wrapper style2">
+				<div class="container">
+					<header>
+						<h2>What my customers are saying:</h2>
+					</header>
+					<div class="row aln-center">
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class=""></span>
+								<p>“Ben Levy has been my tech guru for
+								several years. He has always worked with the
+								utmost integrity and competence through our
+								many encounters. He has a unique ability to
+								instruct people less competent, and also
+								engage and resolve the many issues that
+								constantly appear with computers. I highly
+								recommend Ben Levy as a computer consultant
+								to those requiring technical assistance.” </p>
+								<h4>Bill Larsen</h4>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span class=""></span>
+								<p>“I recently bought a new MacBook Pro and hired Ben to iron out the glitches that accompany the transfer of data from an old computer to the new one. He solved every problem that came up knowledgeably and without any time wasted. I would definitely hire him again for any computer issues.”</p>
+								<h4>Nancy Mills Newman</h4>
+							</section>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<section class="box style1">
+								<span ></span>
+								<p>“Ben Levy has been our digital tech for about three years.  We have been quite satisfied with his professional help in solving issues and upgrading smart phones, laptops and desktop computers.”</p>
+								<h4>Doug and Penny Rodrick</h4>
+							</section>
+						</div>
+					</div>
+					<footer>
+						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
+						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+					</footer>
+				</div>
+			</article>
+
 		
 		<!-- Video -->
             <article id="video" class="wrapper style1">
-                <div class="video-container">
-               <iframe
-                   width="784" height="441" src="https://www.youtube.com/embed/fNp8noG3GHs?si=0XqdTi_jJeyZsR45&amp;" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe> 
+					<header>
+						<h2>Hire Me</h2>
+					</header>
+                <div class="container" style="max-width: 40%">
+                    <p>Ready to get started? Reach out for a free 10-minute
+                    phone consultation or schedule an in-home or remote
+                    appointment ($70/hr billed by the half hour).</p>
+                
+                </div>
+                <div style="max-width: 50%; margin-left: auto; margin-right:
+                    auto;">
+              <img width="20" height="20" src="./assets/mail.svg" alt="mail"
+              class="contact-icon"> 
+              <span> <a href="mailto:jim@example.com">jim@example.com</a>
+                  </span>
+                </div>
+                <div>
+               <img width="20" height="20" src="./assets/phone.svg" alt="phone" class=""> 
+               <span> <a href="tel:+14155550132">+1 (415) 555‑0132</a> (call
+               or text)</span>
+  
                 </div>
             </article>
-
-		<!-- Form -->
-            <article id="form" class="wrapper style1">
-                <iframe
-                    src="https://docs.google.com/forms/d/e/1FAIpQLSfWOAqeoq6fysfbgxM5m03KqTBgoCw6BaP70KH3sM_-s0SsKA/viewform?embedded=true"
-                    style="width:100%; overflow:auto;"
-                    width="640" height="1200" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-            </article>
-
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
