--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 		<!-- Nav -->
 			<nav id="nav">
 				<ul class="container">
-					<li><a href="#about">About</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="#top">About</a></li>
 					<li><a href="#testimonials">Testimonials</a></li>
+					<li><a href="#contact">Contact</a></li>
 				</ul>
 			</nav>
 
@@ -58,10 +58,10 @@
 			</article>
 
 		<!-- Work -->
-			<article id="work" class="wrapper style2">
+			<article id="testimonials" class="wrapper style2">
 				<div class="container">
 					<header>
-						<h2>What my customers are saying:</h2>
+						<h2>Testimonials</h2>
 					</header>
 					<div class="row aln-center">
 						<div class="col-4 col-6-medium col-12-small">
@@ -95,22 +95,22 @@
 						</div>
 					</div>
 					<footer>
-						<p>Lorem ipsum dolor sit sapien vestibulum ipsum primis?</p>
-						<a href="#portfolio" class="button large scrolly">See some of my recent work</a>
+						<p>References available upon request.</p>
 					</footer>
 				</div>
 			</article>
 
 		
 		<!-- Video -->
-            <article id="video" class="wrapper style1">
-					<header>
-						<h2>Hire Me</h2>
+            <article id="contact" class="wrapper style1">
+					<header style="margin: 0;">
+						<h2 >Hire Me</h2>
 					</header>
-                <div class="container" style="max-width: 40%">
-                    <p>Ready to get started? Reach out for a free 10-minute
-                    phone consultation or schedule an in-home or remote
-                    appointment ($70/hr billed by the half hour).</p>
+                <div class="container" style="">
+                    <p>Ready to get started? Reach out for a <strong>free 
+                        phone consultation</strong> </br> or schedule
+                    an <strong>in-home or remote
+                        appointment</strong> ($85/hr billed by the half hour).</p>
                 
                 </div>
                 <div style="max-width: 50%; margin-left: auto; margin-right:
