--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Peninsula Tech</title>
+		<title>Levy Technical</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -26,13 +26,13 @@
 						</div>
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
-                                <h1><strong>Peninsula Tech</strong><br><br>
+                                <h1><strong>Levy Technical</strong><br><br>
 								    Your Bay Area tech guru.</h1>
 							</header>
-							<p>Hi, my name is Ben and I provide in-home 
-                            tech support in the San Francisco Bay Area, 
+							<p>Hi, I'm Ben. I provide in-home 
+                            tech support to the San Francisco Bay Area, 
                             including Brisbane, South San Francisco, and 
-                            Daly City.
+                            Daly City. Serving both individuals and small businesses.
                             </p>
                             <p > 
                             <strong>I can help with:</strong>
@@ -110,7 +110,7 @@
                     <p>Ready to get started? Reach out for a <strong>free 
                         phone consultation</strong> </br> or schedule
                     an <strong>in-home or remote
-                        appointment</strong> ($85/hr billed by the half hour).</p>
+                        appointment</strong> ($90/hr billed by the half hour).</p>
                 
                 </div>
                 <div style="max-width: 50%; margin-left: auto; margin-right:
