--- a/index.html
+++ b/index.html
@@ -32,20 +32,18 @@
 							<p>Hi, I'm Ben. I provide in-home 
                             tech support to the San Francisco Bay Area, 
                             including Brisbane, South San Francisco, and 
-                            Daly City. Serving both individuals and small businesses.
+                            Daly City. Serving individuals and small businesses.
                             </p>
                             <p > 
                             <strong>I can help with:</strong>
                                 <ul class='dual-columns'>
-                                    <li>Mac</li>
-                                    <li>Windows</li>
-                                    <li>iPhone</li>
-                                    <li>Android</li>
-                                    <li>Printers</li>
-                                    <li>Email</li>
+                                    <li>Computers</li>
+                                    <li>Smartphones</li>
+                                    <li>Websites</li>
                                     <li>Software</li>
-                                    <li>Home network</li>
-                                    <li>Microsoft 365</li>
+                                    <li>Networking</li>
+                                    <li>Printers</li>
+                                    <li>Automation</li>
                                     <li>And more!</li>
 
                                 </ul>
@@ -68,8 +66,8 @@
 							<section class="box style1">
 								<span class=""></span>
 								<p>“Ben Levy has been my tech guru for
-								several years. He has always worked with the
-								utmost integrity and competence through our
+                                several years. He has <b>always worked with the
+                                    utmost integrity and competence </b> through our
 								many encounters. He has a unique ability to
 								instruct people less competent, and also
 								engage and resolve the many issues that
@@ -82,7 +80,12 @@
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class=""></span>
-								<p>“I recently bought a new MacBook Pro and hired Ben to iron out the glitches that accompany the transfer of data from an old computer to the new one. He solved every problem that came up knowledgeably and without any time wasted. I would definitely hire him again for any computer issues.”</p>
+								<p>“I recently bought a new MacBook Pro and
+								hired Ben to iron out the glitches that
+								accompany the transfer of data from an old
+                                computer to the new one. He <b>solved every
+                                    problem that came up knowledgeably and
+                                    without any time wasted</b>. I would definitely hire him again for any computer issues.”</p>
 								<h4>Nancy Mills Newman</h4>
 							</section>
 						</div>
@@ -110,7 +113,7 @@
                     <p>Ready to get started? Reach out for a <strong>free 
                         phone consultation</strong> </br> or schedule
                     an <strong>in-home or remote
-                        appointment</strong> ($90/hr billed by the half hour).</p>
+                        appointment</strong> ($95/hr billed by the half hour).</p>
                 
                 </div>
                 <div style="max-width: 50%; margin-left: auto; margin-right:
