Phones instead of Smartphones

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <strong>I can help with:</strong>
                                 <ul class='dual-columns'>
                                     <li>Computers</li>
-                                    <li>Smartphones</li>
+                                    <li>Phones</li>
                                     <li>Websites</li>
                                     <li>Software</li>
                                     <li>Networking</li>
