swap penny's testimonial out for scotty's

--- a/index.html
+++ b/index.html
@@ -71,29 +71,24 @@
 								many encounters. He has a unique ability to
 								instruct people less competent, and also
 								engage and resolve the many issues that
-								constantly appear with computers. I highly
-								recommend Ben Levy as a computer consultant
-								to those requiring technical assistance.” </p>
+								constantly appear with computers.” </p>
 								<h4>Bill Larsen</h4>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
 								<span class=""></span>
-								<p>“I recently bought a new MacBook Pro and
-								hired Ben to iron out the glitches that
-								accompany the transfer of data from an old
-                                computer to the new one. He <b>solved every
-                                    problem that came up knowledgeably and
-                                    without any time wasted</b>. I would definitely hire him again for any computer issues.”</p>
+								<p>“I recently hired Ben to iron out the glitches that accompany the transfer of data from an old computer to the new one. He <b>solved every problem that came up knowledgeably and without any time wasted</b>. I would definitely hire him again.”</p>
 								<h4>Nancy Mills Newman</h4>
 							</section>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<section class="box style1">
-								<span ></span>
-								<p>“Ben Levy has been our digital tech for about three years.  We have been quite satisfied with his professional help in solving issues and upgrading smart phones, laptops and desktop computers.”</p>
-								<h4>Doug and Penny Rodrick</h4>
+								<span class=""></span>
+								<p>“I recently had the opportunity to work on my company’s Website project with Ben Levy and was
+                                <b>impressed with his technical IT skills, and his ability to communicate, identify and correct the
+                                    issues</b> that are difficult for me as a “non-tech” person to comprehend.” </p>
+								<h4>Scott Wall</h4>
 							</section>
 						</div>
 					</div>
@@ -120,12 +115,12 @@
                     auto;">
               <img width="20" height="20" src="./assets/mail.svg" alt="mail"
               class="contact-icon"> 
-              <span> <a href="mailto:jim@example.com">jim@example.com</a>
+              <span> <a href="mailto:jim@example.com">ben@levytechnical.com</a>
                   </span>
                 </div>
                 <div>
                <img width="20" height="20" src="./assets/phone.svg" alt="phone" class=""> 
-               <span> <a href="tel:+14155550132">+1 (415) 555‑0132</a> (call
+               <span> <a href="tel:+14155550132">+1 (650) 402‑0045</a> (call
                or text)</span>
   
                 </div>
