--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
                   </span>
                 </div>
                 <div>
-               <img width="20" height="20" src="./assets/phone.svg" alt="phone" class=""> 
+               <img width="20" height="20" src="./assets/phone.svg" alt="phone"
+               class="contact-icon"> 
                <span> <a href="tel:+14155550132">+1 (650) 402‑0045</a> (call
                or text)</span>
   
