correct contact info href, change testimonial box padding

--- a/index.html
+++ b/index.html
@@ -108,20 +108,20 @@
                     <p>Ready to get started? Reach out for a <strong>free 
                         phone consultation</strong> </br> or schedule
                     an <strong>in-home or remote
-                        appointment</strong> ($95/hr billed by the half hour).</p>
+                        appointment</strong> ($95/hr, billed by the half hour).</p>
                 
                 </div>
                 <div style="max-width: 50%; margin-left: auto; margin-right:
                     auto;">
               <img width="20" height="20" src="./assets/mail.svg" alt="mail"
               class="contact-icon"> 
-              <span> <a href="mailto:jim@example.com">ben@levytechnical.com</a>
+              <span> <a href="mailto:ben@levytechnical.com">ben@levytechnical.com</a>
                   </span>
                 </div>
                 <div>
                <img width="20" height="20" src="./assets/phone.svg" alt="phone"
                class="contact-icon"> 
-               <span> <a href="tel:+14155550132">+1 (650) 402‑0045</a> (call
+               <span> <a href="tel:+16504020045">(650) 402‑0045</a> (call
                or text)</span>
   
                 </div>
