guru subheader and nav formatting

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 		<!-- Nav -->
 			<nav id="nav">
 				<ul class="container">
-					<li><a href="#top">About</a></li>
+					<li id='about-nav-link'><a href="#top">About</a></li>
 					<li><a href="#testimonials">Testimonials</a></li>
 					<li><a href="#contact">Contact</a></li>
 				</ul>
@@ -27,7 +27,7 @@
 						<div class="col-8 col-7-large col-12-medium">
 							<header>
                                 <h1><strong>Levy Technical</strong><br><br>
-								    Your Bay Area tech guru.</h1>
+                                    <span id="guru-subheader">Your Bay Area tech guru.</span></h1>
 							</header>
 							<p>Hi, I'm Ben. I provide in-home 
                             tech support to the San Francisco Bay Area, 
